force-app/main/default/objects/Event_Room__c/Event_Room__c.object-meta.xml
<CustomObject>
    <label>Event Room</label>
    <nameField>
        <displayFormat>ER{000000}</displayFormat>
        <label>ER Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>