force-app/main/default/objects/Event_Room__c/fields/Actual_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Actual_Pickup__c</fullName>
    <label>Additional PU</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>