force-app/main/default/objects/Event_Room__c/fields/Block_Date__c.field-meta.xml
<CustomField>
    <fullName>Block_Date__c</fullName>
    <label>Block Date</label>
    <type>Date</type>
</CustomField>