force-app/main/default/objects/Event_Room__c/fields/Block_End__c.field-meta.xml
<CustomField>
    <fullName>Block_End__c</fullName>
    <label>Block End</label>
    <type>Date</type>
</CustomField>