force-app/main/default/objects/Event_Room__c/fields/Calculated_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Capacity__c</fullName>
    <formula>Usable_Sq_Ft__c / SqFt_Per_Person__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>