force-app/main/default/objects/Event_Room__c/fields/Commision_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commision_Rate__c</fullName>
    <label>Commission Rate</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>