force-app/main/default/objects/Event_Room__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission</label>
    <type>Checkbox</type>
</CustomField>