force-app/main/default/objects/Event_Room__c/fields/Comp_Needed__c.field-meta.xml
<CustomField>
    <fullName>Comp_Needed__c</fullName>
    <label>Comp Rooms 1/</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>