force-app/main/default/objects/Event_Room__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <formula>CASE( MOD(  Block_Date__c   - DATE(1900, 1, 7), 7), 0, &quot;SUN&quot;, 1, &quot;MON&quot;, 2, &quot;TUE&quot;, 3,
&quot;WED&quot;, 4, &quot;THU&quot;, 5, &quot;FRI&quot;, 6, &quot;SAT&quot;,&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day</label>
    <type>Text</type>
</CustomField>