force-app/main/default/objects/Event_Room__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>Event_Details__c</referenceTo>
    <relationshipLabel>Event Rooms</relationshipLabel>
    <relationshipName>Event_Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>