force-app/main/default/objects/Event_Room__c/fields/Event_Room__c.field-meta.xml
<CustomField>
    <fullName>Event_Room__c</fullName>
    <label>Event Room Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>