force-app/main/default/objects/Event_Room__c/fields/Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Guarantee__c</fullName>
    <label>Guarantee %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>