force-app/main/default/objects/Event_Room__c/fields/Hotel__c.field-meta.xml
<CustomField>
    <fullName>Hotel__c</fullName>
    <label>Hotel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>