force-app/main/default/objects/Event_Room__c/fields/Minimum_PU__c.field-meta.xml
<CustomField>
    <fullName>Minimum_PU__c</fullName>
    <formula>Reserved__c *  Guarantee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum PU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>