force-app/main/default/objects/Event_Room__c/fields/Negotiated_Rate__c.field-meta.xml
<CustomField>
    <fullName>Negotiated_Rate__c</fullName>
    <label>Negotiated Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>