force-app/main/default/objects/Event_Room__c/fields/Outside_PU_Com__c.field-meta.xml
<CustomField>
    <fullName>Outside_PU_Com__c</fullName>
    <label>Outside PU Com</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>