force-app/main/default/objects/Event_Room__c/fields/Pickup__c.field-meta.xml
<CustomField>
    <fullName>Pickup__c</fullName>
    <label>Pickup</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>