force-app/main/default/objects/Event_Room__c/fields/Room_Depth__c.field-meta.xml
<CustomField>
    <fullName>Room_Depth__c</fullName>
    <label>Room Depth</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>