force-app/main/default/objects/Event_Room__c/fields/Room_Description__c.field-meta.xml
<CustomField>
    <fullName>Room_Description__c</fullName>
    <label>Room Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>