force-app/main/default/objects/Event_Room__c/fields/Room_Height__c.field-meta.xml
<CustomField>
    <fullName>Room_Height__c</fullName>
    <label>Room Height</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>