force-app/main/default/objects/Event_Room__c/fields/Room_Intrusion_Depth_2__c.field-meta.xml
<CustomField>
    <fullName>Room_Intrusion_Depth_2__c</fullName>
    <label>Room Intrusion Depth 2</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>