force-app/main/default/objects/Event_Room__c/fields/Room_Width__c.field-meta.xml
<CustomField>
    <fullName>Room_Width__c</fullName>
    <label>Room Width</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>