force-app/main/default/objects/Event_Room__c/fields/Sections__c.field-meta.xml
<CustomField>
    <fullName>Sections__c</fullName>
    <label>Sections</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>