force-app/main/default/objects/Event_Room__c/fields/SqFt_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>SqFt_Per_Person__c</fullName>
    <label>SqFt Per Person</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>