force-app/main/default/objects/Event_Room__c/fields/Square_Ft__c.field-meta.xml
<CustomField>
    <fullName>Square_Ft__c</fullName>
    <formula>Room_Width__c * Room_Depth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Square Ft</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>