force-app/main/default/objects/Event_Room__c/fields/Sum_PU__c.field-meta.xml
<CustomField>
    <fullName>Sum_PU__c</fullName>
    <label>Sum PU</label>
    <summarizedField>Event_Room_Detail__c.PickUp__c</summarizedField>
    <summaryForeignKey>Event_Room_Detail__c.Room_Block__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>