force-app/main/default/objects/Event_Room__c/fields/Total_PU__c.field-meta.xml
<CustomField>
    <fullName>Total_PU__c</fullName>
    <formula>Sum_PU__c + Actual_Pickup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total PU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>