force-app/main/default/objects/Event_Room__c/fields/Usable_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Usable_Sq_Ft__c</fullName>
    <formula>(Room_Width__c -(Room_Intrusion_Width_1__c+ Room_Intrusion_Width_2__c))*(Room_Depth__c-( Room_Intrusion_Depth_1__c + Room_Intrusion_Depth_2__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usable Sq Ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>