force-app/main/default/objects/Event_Room__c/recordTypes/Ball.recordType-meta.xml
<RecordType>
    <fullName>Ball</fullName>
    <active>true</active>
    <label>Ball</label>
</RecordType>