force-app/main/default/objects/Event_Room__c/recordTypes/Sleeping.recordType-meta.xml
<RecordType>
    <fullName>Sleeping</fullName>
    <active>true</active>
    <label>Sleeping</label>
</RecordType>